# callagents

./: LiveKit_Agents_RPD.docx  LiveKit_Agents_RPD_中文版.docx  generate_rpd.py  generate_rpd_cn.py
dashboard/: .env.example  PROJECT_STATUS.md  QUICK_START.md  README.md  docker-compose.yml
dashboard/backend/: .env.example  Dockerfile  config.py  database.py  main.py  requirements.txt
dashboard/backend/api/: __init__.py  router_agents.py  router_system.py
dashboard/backend/models/: __init__.py  agent.py  api_key.py  logs.py  metrics.py  session.py  system_config.py
dashboard/frontend/: index.html  package.json  tsconfig.json  vite.config.ts
dashboard/frontend/src/: App.vue  env.d.ts  main.ts
dashboard/frontend/src/router/: index.ts
dashboard/frontend/src/views/: Agents.vue  CreateAgent.vue  Dashboard.vue  EditAgent.vue  Layout.vue  Logs.vue  Settings.vue
dashboard/scripts/: init-mysql.sql  start_dashboard.py
examples/telephony/: basic_dtmf_agent.py  inbound_call_agent.py
examples/telephony/bank-ivr/: ivr_system_agent.py
livekit-agents/livekit/agents/beta/workflows/: warm_transfer.py
livekit-agents/livekit/agents/voice/: __init__.py
livekit-agents/livekit/agents/voice/telephony/: __init__.py  call_queue.py  call_summary.py  caller_info.py
livekit-plugins/livekit-plugins-tencentcloud/: README.md  pyproject.toml
livekit-plugins/livekit-plugins-tencentcloud/livekit/plugins/tencentcloud/: __init__.py  auth.py  log.py  models.py  stt.py  tts.py
